@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-30T08:18:20Z",
-  "count_outdated" : 424,
-  "uniques_outdated" : 243,
-  "count" : 450,
-  "uniques" : 258,
+  "timestamp" : "2022-07-31T01:47:27Z",
+  "count_outdated" : 426,
+  "uniques_outdated" : 245,
+  "count" : 453,
+  "uniques" : 260,
   "clones" : [
-    {
-      "timestamp": "2022-07-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-07-19T00:00:00Z",
       "count": 1,
@@ -91,10 +84,10 @@
     },
     {
       "timestamp": "2022-07-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
