@@ -1,12 +1,7 @@
 {
-  "count": 26,
+  "count": 27,
   "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2022-07-16T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-19T00:00:00Z",
       "count": 1,
@@ -64,8 +59,8 @@
     },
     {
       "timestamp": "2022-07-30T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
